testsuite/tests/partial-sigs/should_compile/Forall1.hs
{-# LANGUAGE PartialTypeSignatures, ScopedTypeVariables #-}
module Forall1 where

fall :: forall a. _ -> a
fall v = v

test :: (Char, Bool)
test = (fall 'c', fall True)
